--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8" />
 <body>
 <h1>Hello World</h1>
 <p>I'm a website.</p>
