--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Andrew Weaver</h1>
+                                <p>Libraries//Archives//Digital//Audio//Visual</p>
 							</div>
 						</div>
 						<nav>
