add projects section

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#work"><b>Work</b></a></li>
 								<li><a href="#about"><b>About</b></a></li>
+                                <li><a href="#work"><b>Work</b></a></li>
+                                <li><a href="#projects"><b>Projects</b></a></li>
 								<li><a href="#contact"><b>Contact</b></a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
