--- a/index.html
+++ b/index.html
@@ -47,8 +47,101 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+                                <p align="center">
+                                <strong>Andrew Weaver, MLIS</strong>
+                                </p>
+                                <p align="center">
+                                weevz@uw.edu | (206) 574-8940
+                                </p>
+                                <h1 id="education">Education</h1>
+                                <p><strong>UNIVERSITY OF WASHINGTON, INFORMATION SCHOOL,</strong> Seattle, WA -- 2015</p>
+                                <p><em>Masters of Library and Information Science</em></p>
+                                <p><strong>UNIVERSITY OF WASHINGTON, JACKSON SCHOOL OF INTERNATIONAL STUDIES,</strong> Seattle, WA -- 2007</p>
+                                <p><em>BA in Japan Studies</em></p>
+                                <hr />
+                                <h1 id="libraryarchives-experience">Library/Archives Experience</h1>
+                                <p>AMERICAN ARCHIVE OF PUBLIC BROADCASTING, <strong>National Digital Stewardship Resident at City University of New York Television</strong></p>
+                                <p>New York, NY -- 07/2016-Present</p>
+                                <ul>
+                                <li>Conducting a full survey of Library's compliance with NDSA Levels of preservation and enacting recommendations</li>
+                                <li>Developing a MySQL based system for automated capture of PREMIS, preservation and fixity metadata</li>
+                                <li>Researching and implementing perceptual video hashing for automated cataloging</li>
+                                <li>Revising and writing micro-service scripts that support core digital and A/V preservation activities</li>
+                                </ul>
+                                <p>UNIVERSITY OF WASHINGTON LIBRARIES MEDIA CENTER, <strong>Digital and Archival Media Technician</strong></p>
+                                <p>Seattle, WA -- 09/2015-07/2016</p>
+                                <ul>
+                                <li>Worked on all stages of media preservation and archiving including: appraisal, description, reformatting, dissemination and digital and physical preservation</li>
+                                <li>Developed scripts and automated systems modeled on the OAIS structure that greatly improved efficiency, accuracy, file integrity and convenience during media digitization and ingest</li>
+                                <li>Trained and supervised staff and graduate/student employees in the execution of media preservation and circulation duties</li>
+                                <li>Provided instruction and reference in all contexts ranging from one-on-one to classroom settings.</li>
+                                <li>Designed workflows for large scale digitization projects of analog materials</li>
+                                <li>Conducted collection surveys to analyze preservation needs as well as reformatting potential under section 108 of US Copyright law</li>
+                                </ul>
+                                <p>UNIVERSITY OF WASHINGTON LIBRARIES MEDIA CENTER, <strong>Graduate Reference Specialist</strong></p>
+                                <p>Seattle, WA -- 08/2014-08/2015</p>
+                                <p>UNIVERSITY OF WASHINGTON LIBRARIES SPECIAL COLLECTIONS, <strong>Assistant to Film Archives Specialist</strong></p>
+                                <p>Seattle, WA -- 12/2013-08/2015</p>
+                                <hr />
+                                <h1 id="other-work-experience">Other Work Experience</h1>
+                                <p>ART JAPAN CO. LTD., <strong>Construction Management</strong></p>
+                                <p>Kagoshima, Japan -- 2011-2013</p>
+                                <p>SATSUMA-SENDAI BOARD OF EDUCATION, <strong>English Teacher</strong></p>
+                                <p>Satsuma-Sendai, Japan -- 2007-2009</p>
+                                <hr />
+                                <h1 id="additional-skills">Additional Skills</h1>
+                                <ul>
+                                <li>Bash, MySQL, XML, FFmpeg, Git Version Control, DACS, PREMIS, EAD</li>
+                                <li>High proficiency in Japanese. Spoken level: fluent. Reading/Writing: 3rd year college level.</li>
+                                </ul>
+                                <hr />
+                                <h1 id="publications">Publications</h1>
+                                <ul>
+                                <li>Weaver A., Colloton E., McManus K., Chau S., Ramirez-Lopez L., Lott A., Graves T. (2017) Building a Digital Preservation Community in Public Broadcasting: A Case Study of the American Archive of Public Broadcasting’s National Digital Stewardship Residencies. <em>IASA Journal,v47</em>, pp 41-47.</li>
+                                <li>Widzinski L., Mandel, D., Weaver, A., Horbal, A. (2016) Media in the Classroom. <em>Against the Grain,v28</em>(5), pp 32-35.</li>
+                                <li>Lee, J. H., Perti, A., Weaver, A., &amp; Windleharth, T. (2014). UW/SIMM Video Game Metadata Schema: Controlled Vocabulary for Genre. http://gamer.ischool.uw.edu/official_release/</li>
+                                </ul>
+                                <hr />
+                                <h1 id="selected-presentations-and-lectures">Selected Presentations and Lectures</h1>
+                                <ul>
+                                <li>&quot;Demystifying FFmpeg and FFplay.&quot; AAPB NDSR Webinar Series. 01/26/2017</li>
+                                <li>&quot;Planning for Preservation in Public Media: An AAPB NDSR Update.&quot; AMIA Annual Conference 2016. Pittsburgh, PA. 11/12/2016.</li>
+                                <li>&quot;Expanding Access Through Music: The Adrian Cowell Films and Research Collection.&quot; <em>Poster</em>. IASA Annual Conference 2016. Washington, DC. 09/27/2016.</li>
+                                <li>&quot;Building a Digital Preservation Community in Public Broadcasting.&quot; IASA Annual Conference 2016. Washington, DC. 09/26/2016.</li>
+                                <li>&quot;Tools and Resources for Multimodal Teaching and Learning.&quot; University of Washington English CIC Program. 11/13/2015.</li>
+                                <li>&quot;Keeping it Real: Providing Access to Physical Collections.&quot; AMIA Annual Conference 2015. Portland, OR. 11/21/2015.</li>
+                                <li>&quot;Expanding Access Through Music: The Adrian Cowell Films and Research Collection.&quot; <em>Poster</em>. AMIA Annual Conference 2015. Portland, OR. 11/19/2015.</li>
+                                <li>&quot;Odds and Sods: The Hidden Music of the Adrian Cowell Films and Research Collection.&quot; Fifty Years of Opium and Conflict in the Shan State of Burma: A Visual Retrospective. Seattle, WA. 5/30/2015.</li>
+                                <li>&quot;Odds and Sods: The Hidden Music of the Adrian Cowell Films and Research Collection.&quot; Pacific Northwest Music Librarians Association. Eugene, OR. 5/5/2015</li>
+                                <li>&quot;Media Archives and Japan Studies Time Based Media. UW Libraries Japanologists' Colloquium.&quot; Seattle, WA. 2/2/2015</li>
+                                </ul>
+                                <hr />
+                                <h1 id="grants">Grants</h1>
+                                <p>Grant Writer and Project Manager. 2016 National Film Preservation Foundation Basic Preservation Grant to preserve the <a href="http://archiveswest.orbiscascade.org/ark:/80444/xv60098/op=fstyle.aspx?t=i&amp;q=waseumc">Joseph F. Rock Ethnographic and Exploration Film Collection</a> ($10,495). Fully Funded.</p>
+                                <hr />
+                                <h1 id="service">Service</h1>
+                                <ul>
+                                <li>Open Source Projects:
+                                <ul>
+                                <li>Creator/Maintainer:</li>
+                                </ul>
+                                <p>audiorecorder (https://github.com/amiaopensource/audiorecorder)</p>
+                                <p>pugetsoundandvision (https://github.com/pugetsoundandvision)</p>
+                                <ul>
+                                <li>Contributor: Vrecord (https://github.com/amiaopensource/vrecord)</li>
+                                </ul></li>
+                                <li>Access Services Committee, University of Washington Libraries 2015-2016</li>
+                                <li><p>University of Washington Information School Student Group 'iWorld' webmaster 2014-2015</p></li>
+                                </ul>
+                                <hr />
+                                <h1 id="professional-affiliations">Professional Affiliations</h1>
+                                <ul>
+                                <li>International Association of Sound and Audiovisual Archives</li>
+                                <li>Association of Moving Image Archivists</li>
+                                <li>Northwest Archivists</li>
+                                <li>Seattle Area Archivists</li>
+                                </ul>
+								
 							</article>
 
 						<!-- About -->
