--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Andrew Weaver</h1>
-                                <p>Libraries//Archives//Digital//Audio//Visual</p>
+                                <h4>Libraries//Archives//Digital//Audio//Visual</h4>
 							</div>
 						</div>
 						<nav>
@@ -51,13 +51,13 @@
                                 <strong>Andrew Weaver, MLIS</strong>
                                 </p>
                                 <h1 id="education">Education</h1>
-                                <p><strong>UNIVERSITY OF WASHINGTON, INFORMATION SCHOOL,</strong> Seattle, WA -- 2015</p>
+                                <h3>UNIVERSITY OF WASHINGTON, INFORMATION SCHOOL, Seattle, WA -- 2015</h3>
                                 <p><em>Masters of Library and Information Science</em></p>
-                                <p><strong>UNIVERSITY OF WASHINGTON, JACKSON SCHOOL OF INTERNATIONAL STUDIES,</strong> Seattle, WA -- 2007</p>
+                                <h3>UNIVERSITY OF WASHINGTON, JACKSON SCHOOL OF INTERNATIONAL STUDIES, Seattle, WA -- 2007</h3>
                                 <p><em>BA in Japan Studies</em></p>
                                 <hr />
                                 <h1 id="libraryarchives-experience">Library/Archives Experience</h1>
-                                <p>AMERICAN ARCHIVE OF PUBLIC BROADCASTING, <strong>National Digital Stewardship Resident at City University of New York Television</strong></p>
+                                <h3>AMERICAN ARCHIVE OF PUBLIC BROADCASTING, <strong>National Digital Stewardship Resident at City University of New York Television</strong></h3>
                                 <p>New York, NY -- 07/2016-Present</p>
                                 <ul>
                                 <li>Conducting a full survey of Library's compliance with NDSA Levels of preservation and enacting recommendations</li>
@@ -65,7 +65,7 @@
                                 <li>Researching and implementing perceptual video hashing for automated cataloging</li>
                                 <li>Revising and writing micro-service scripts that support core digital and A/V preservation activities</li>
                                 </ul>
-                                <p>UNIVERSITY OF WASHINGTON LIBRARIES MEDIA CENTER, <strong>Digital and Archival Media Technician</strong></p>
+                                <h3>UNIVERSITY OF WASHINGTON LIBRARIES MEDIA CENTER, <strong>Digital and Archival Media Technician</strong></h3>
                                 <p>Seattle, WA -- 09/2015-07/2016</p>
                                 <ul>
                                 <li>Worked on all stages of media preservation and archiving including: appraisal, description, reformatting, dissemination and digital and physical preservation</li>
@@ -75,15 +75,15 @@
                                 <li>Designed workflows for large scale digitization projects of analog materials</li>
                                 <li>Conducted collection surveys to analyze preservation needs as well as reformatting potential under section 108 of US Copyright law</li>
                                 </ul>
-                                <p>UNIVERSITY OF WASHINGTON LIBRARIES MEDIA CENTER, <strong>Graduate Reference Specialist</strong></p>
+                                <h3>UNIVERSITY OF WASHINGTON LIBRARIES MEDIA CENTER, <strong>Graduate Reference Specialist</strong></h3>
                                 <p>Seattle, WA -- 08/2014-08/2015</p>
-                                <p>UNIVERSITY OF WASHINGTON LIBRARIES SPECIAL COLLECTIONS, <strong>Assistant to Film Archives Specialist</strong></p>
+                                <h3>UNIVERSITY OF WASHINGTON LIBRARIES SPECIAL COLLECTIONS, <strong>Assistant to Film Archives Specialist</strong></h3>
                                 <p>Seattle, WA -- 12/2013-08/2015</p>
                                 <hr />
                                 <h1 id="other-work-experience">Other Work Experience</h1>
-                                <p>ART JAPAN CO. LTD., <strong>Construction Management</strong></p>
+                                <h3>ART JAPAN CO. LTD., <strong>Construction Management</strong></h3>
                                 <p>Kagoshima, Japan -- 2011-2013</p>
-                                <p>SATSUMA-SENDAI BOARD OF EDUCATION, <strong>English Teacher</strong></p>
+                                <h3>SATSUMA-SENDAI BOARD OF EDUCATION, <strong>English Teacher</strong></h3>
                                 <p>Satsuma-Sendai, Japan -- 2007-2009</p>
                                 <hr />
                                 <h1 id="additional-skills">Additional Skills</h1>
