--- a/index.html
+++ b/index.html
@@ -47,16 +47,14 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-                                <p align="center">
-                                <strong>Andrew Weaver, MLIS</strong>
-                                </p>
-                                <h1 id="education">Education</h1>
+                                <h4 align="center">Andrew Weaver, MLIS</h4>
+                                <h1 id="education" align="center">Education</h1>
                                 <h3>UNIVERSITY OF WASHINGTON, INFORMATION SCHOOL, Seattle, WA -- 2015</h3>
                                 <p><em>Masters of Library and Information Science</em></p>
                                 <h3>UNIVERSITY OF WASHINGTON, JACKSON SCHOOL OF INTERNATIONAL STUDIES, Seattle, WA -- 2007</h3>
                                 <p><em>BA in Japan Studies</em></p>
                                 <hr />
-                                <h1 id="libraryarchives-experience">Library/Archives Experience</h1>
+                                <h1 id="libraryarchives-experience" align="center">Library/Archives Experience</h1>
                                 <h3>AMERICAN ARCHIVE OF PUBLIC BROADCASTING, <strong>National Digital Stewardship Resident at City University of New York Television</strong></h3>
                                 <p>New York, NY -- 07/2016-Present</p>
                                 <ul>
@@ -80,26 +78,26 @@
                                 <h3>UNIVERSITY OF WASHINGTON LIBRARIES SPECIAL COLLECTIONS, <strong>Assistant to Film Archives Specialist</strong></h3>
                                 <p>Seattle, WA -- 12/2013-08/2015</p>
                                 <hr />
-                                <h1 id="other-work-experience">Other Work Experience</h1>
+                                <h1 id="other-work-experience" align="center">Other Work Experience</h1>
                                 <h3>ART JAPAN CO. LTD., <strong>Construction Management</strong></h3>
                                 <p>Kagoshima, Japan -- 2011-2013</p>
                                 <h3>SATSUMA-SENDAI BOARD OF EDUCATION, <strong>English Teacher</strong></h3>
                                 <p>Satsuma-Sendai, Japan -- 2007-2009</p>
                                 <hr />
-                                <h1 id="additional-skills">Additional Skills</h1>
+                                <h1 id="additional-skills" align="center">Additional Skills</h1>
                                 <ul>
                                 <li>Bash, MySQL, XML, FFmpeg, Git Version Control, DACS, PREMIS, EAD</li>
                                 <li>High proficiency in Japanese. Spoken level: fluent. Reading/Writing: 3rd year college level.</li>
                                 </ul>
                                 <hr />
-                                <h1 id="publications">Publications</h1>
+                                <h1 id="publications" align="center">Publications</h1>
                                 <ul>
                                 <li>Weaver A., Colloton E., McManus K., Chau S., Ramirez-Lopez L., Lott A., Graves T. (2017) Building a Digital Preservation Community in Public Broadcasting: A Case Study of the American Archive of Public Broadcasting’s National Digital Stewardship Residencies. <em>IASA Journal,v47</em>, pp 41-47.</li>
                                 <li>Widzinski L., Mandel, D., Weaver, A., Horbal, A. (2016) Media in the Classroom. <em>Against the Grain,v28</em>(5), pp 32-35.</li>
                                 <li>Lee, J. H., Perti, A., Weaver, A., &amp; Windleharth, T. (2014). UW/SIMM Video Game Metadata Schema: Controlled Vocabulary for Genre. http://gamer.ischool.uw.edu/official_release/</li>
                                 </ul>
                                 <hr />
-                                <h1 id="selected-presentations-and-lectures">Selected Presentations and Lectures</h1>
+                                <h1 id="selected-presentations-and-lectures" align="center">Selected Presentations and Lectures</h1>
                                 <ul>
                                 <li>&quot;Demystifying FFmpeg and FFplay.&quot; AAPB NDSR Webinar Series. 01/26/2017</li>
                                 <li>&quot;Planning for Preservation in Public Media: An AAPB NDSR Update.&quot; AMIA Annual Conference 2016. Pittsburgh, PA. 11/12/2016.</li>
@@ -113,10 +111,10 @@
                                 <li>&quot;Media Archives and Japan Studies Time Based Media. UW Libraries Japanologists' Colloquium.&quot; Seattle, WA. 2/2/2015</li>
                                 </ul>
                                 <hr />
-                                <h1 id="grants">Grants</h1>
+                                <h1 id="grants" align="center">Grants</h1>
                                 <p>Grant Writer and Project Manager. 2016 National Film Preservation Foundation Basic Preservation Grant to preserve the <a href="http://archiveswest.orbiscascade.org/ark:/80444/xv60098/op=fstyle.aspx?t=i&amp;q=waseumc">Joseph F. Rock Ethnographic and Exploration Film Collection</a> ($10,495). Fully Funded.</p>
                                 <hr />
-                                <h1 id="service">Service</h1>
+                                <h1 id="service" align="center">Service</h1>
                                 <ul>
                                 <li>Open Source Projects:
                                 <ul>
@@ -131,7 +129,7 @@
                                 <li><p>University of Washington Information School Student Group 'iWorld' webmaster 2014-2015</p></li>
                                 </ul>
                                 <hr />
-                                <h1 id="professional-affiliations">Professional Affiliations</h1>
+                                <h1 id="professional-affiliations" align="center">Professional Affiliations</h1>
                                 <ul>
                                 <li>International Association of Sound and Audiovisual Archives</li>
                                 <li>Association of Moving Image Archivists</li>
