--- a/index.html
+++ b/index.html
@@ -117,16 +117,10 @@
                                 <h1 id="service" align="center">Service</h1>
                                 <ul>
                                 <li>Open Source Projects:
-                                <ul>
-                                <li>Creator/Maintainer:</li>
-                                </ul>
-                                <p>audiorecorder (https://github.com/amiaopensource/audiorecorder)</p>
-                                <p>pugetsoundandvision (https://github.com/pugetsoundandvision)</p>
-                                <ul>
-                                <li>Contributor: Vrecord (https://github.com/amiaopensource/vrecord)</li>
-                                </ul></li>
+                                <li>Creator/Maintainer: <a href="(https://github.com/amiaopensource/audiorecorder)">audiorecorder</a>, <a href="(https://github.com/pugetsoundandvision)">pugetsoundandvision</a></li>
+                                <li>Contributor: <a href="(https://github.com/amiaopensource/vrecord)">Vrecord</a></li>
                                 <li>Access Services Committee, University of Washington Libraries 2015-2016</li>
-                                <li><p>University of Washington Information School Student Group 'iWorld' webmaster 2014-2015</p></li>
+                                <li>University of Washington Information School Student Group 'iWorld' webmaster 2014-2015</li>
                                 </ul>
                                 <hr />
                                 <h1 id="professional-affiliations" align="center">Professional Affiliations</h1>
