--- a/shark/index.html
+++ b/shark/index.html
@@ -12,8 +12,8 @@
         <img src="assets/images/shark.png">
         </div>
         <div class="content">
-            <p>Welcome to my page</>
-                <button class=button>Hello</button>
+            <p>SHARK!!</>
+                <button class=button>A Button</button>
         </div>
     </body>
 </html>
