--- a/shark/index.html
+++ b/shark/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-    <title>Welcome</title>
+    <title>Get out of the water!</title>
     <link rel="stylesheet" href="assets/css/main.css" />
     </head>
     <body>
