add about section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
                                 <h4 align="center">Andrew Weaver, MLIS</h4>
                                 <h1 id="education" align="center">Education</h1>
                                 <h3>UNIVERSITY OF WASHINGTON, INFORMATION SCHOOL, Seattle, WA -- 2015</h3>
@@ -136,14 +135,13 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p>Hello and welcome! I am an Archivist/Libarian who specializes in audiovisual and digital materials. Particular interests of mine are using technology to increase access to collections, integrating AV resources into instruction, Open Source software/worklows, and the audiovisual heritage of the Pacific Northwest!</p>
+                                    <p>For my CV please see the 'Work' section of this website.  For examples of some of my projects see the 'Projects' section.</p>
 							</article>
                             
     						<!-- Projects -->
     							<article id="projects">
     								<h2 class="major">Projects</h2>
-    								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
     								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
     								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
     							</article>
