--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 							</div>
 						</div>
 						<nav>
-							<ul>
-								<li><a href="#about"><b>About</b></a></li>
-                                <li><a href="#work"><b>Work</b></a></li>
-                                <li><a href="#projects"><b>Projects</b></a></li>
-								<li><a href="#contact"><b>Contact</b></a></li>
+                            <ul>
+								<li class=frontlist><a href="#about"><b>About</b></a></li>
+                                <li class=frontlist><a href="#work"><b>Work</b></a></li>
+                                <li class=frontlist><a href="#projects"><b>Projects</b></a></li>
+								<li class=frontlist><a href="#contact"><b>Contact</b></a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -135,7 +135,7 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<p>Hello and welcome! I am an Archivist/Libarian who specializes in audiovisual and digital materials. Particular interests of mine are using technology to increase access to collections, integrating AV resources into instruction, Open Source software/worklows, and the audiovisual heritage of the Pacific Northwest!</p>
+								<p>Hello and welcome! I am an Archivist/Libarian who specializes in audiovisual and digital materials. Particular interests of mine are using technology to increase access to collections, integrating AV resources into instruction, Open Source software/worklows and preserving the audiovisual heritage of the Pacific Northwest!</p>
                                     <p>For my CV please see the 'Work' section of this website.  For examples of some of my projects see the 'Projects' section.</p>
 							</article>
                             
@@ -204,31 +204,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								</section>
 
 								<section>
-									<h3 class="major">Lists</h3>
 
-									<h4>Unordered</h4>
-									<ul>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Sagittis adipiscing.</li>
-										<li>Felis enim feugiat.</li>
-									</ul>
-
-									<h4>Alternate</h4>
-									<ul class="alt">
-										<li>Dolor pulvinar etiam.</li>
-										<li>Sagittis adipiscing.</li>
-										<li>Felis enim feugiat.</li>
-									</ul>
-
-									<h4>Ordered</h4>
-									<ol>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Etiam vel felis viverra.</li>
-										<li>Felis enim feugiat.</li>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Etiam vel felis lorem.</li>
-										<li>Felis enim et feugiat.</li>
-									</ol>
 									<h4>Icons</h4>
 									<ul class="icons">
 										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
