--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                 <li>Northwest Archivists</li>
                                 <li>Seattle Area Archivists</li>
                                 </ul>
-								
+
 							</article>
 
 						<!-- About -->
@@ -138,7 +138,7 @@
 								<p>Hello and welcome! I am an Archivist/Libarian who specializes in audiovisual and digital materials. Particular interests of mine are using technology to increase access to collections, integrating AV resources into instruction, Open Source software/worklows and preserving the audiovisual heritage of the Pacific Northwest!</p>
                                     <p>For my CV please see the 'Work' section of this website.  For examples of some of my projects see the 'Projects' section.</p>
 							</article>
-                            
+
     						<!-- Projects -->
     							<article id="projects">
     								<h2 class="major">Projects</h2>
@@ -170,6 +170,7 @@
 								<ul class="icons">
 									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://github.com/privatezero" class="icon fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.librarything.com/profile/private_zero" class="icon fa-book"><span class="label">LT</span></a></li>
 								</ul>
 							</article>
 
