--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://twitter.com/private_zero" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://github.com/privatezero" class="icon fa-github"><span class="label">GitHub</span></a></li>
 									<li><a href="https://www.librarything.com/profile/private_zero" class="icon fa-book"><span class="label">LT</span></a></li>
 								</ul>
