--- a/index.html
+++ b/index.html
@@ -149,25 +149,8 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
-									<div class="field half first">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field half">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="4"></textarea>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="special" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-								</form>
-								<ul class="icons">
+								<p class="frontlist" align="center">Find me in the following places!</p>
+								<ul class="icons" align="center">
 									<li><a href="https://twitter.com/private_zero" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://github.com/privatezero" class="icon fa-github"><span class="label">GitHub</span></a></li>
 									<li><a href="https://www.librarything.com/profile/private_zero" class="icon fa-book"><span class="label">LT</span></a></li>
