--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                                 <li class=frontlist><a href="#work"><b>Work</b></a></li>
                                 <li class=frontlist><a href="#projects"><b>Projects</b></a></li>
 								<li class=frontlist><a href="#contact"><b>Contact</b></a></li>
+                                <li class=frontlist><a href="weaverblog"><b>Blog</b></a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
