--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                 <hr />
                                 <h1 id="additional-skills" align="center">Additional Skills</h1>
                                 <ul>
-                                <li>Bash, MySQL, XML, FFmpeg, Git Version Control, DACS, PREMIS, EAD</li>
+                                <li>Bash, MySQL, XML, HTML, CSS, FFmpeg, Git, DACS, PREMIS, EAD</li>
                                 <li>High proficiency in Japanese. Spoken level: fluent. Reading/Writing: 3rd year college level.</li>
                                 </ul>
                                 <hr />
@@ -99,6 +99,7 @@
                                 <hr />
                                 <h1 id="selected-presentations-and-lectures" align="center">Selected Presentations and Lectures</h1>
                                 <ul>
+                                <li>&quot;Building a Digital Preservation Community in Public Broadcasting: A Case Study of the American Archive of Public Broadcasting’s National Digital Stewardship Residencies.&quot; NDSR Symposium. Washington, DC. 04/27/2017.</li>
                                 <li>&quot;Demystifying FFmpeg and FFplay.&quot; AAPB NDSR Webinar Series. 01/26/2017</li>
                                 <li>&quot;Planning for Preservation in Public Media: An AAPB NDSR Update.&quot; AMIA Annual Conference 2016. Pittsburgh, PA. 11/12/2016.</li>
                                 <li>&quot;Expanding Access Through Music: The Adrian Cowell Films and Research Collection.&quot; <em>Poster</em>. IASA Annual Conference 2016. Washington, DC. 09/27/2016.</li>
