--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<p>Hello and welcome! I am an Archivist/Libarian who specializes in audiovisual and digital materials. Particular interests of mine are using technology to increase access to collections, integrating AV resources into instruction, Open Source software/worklows and preserving the audiovisual heritage of the Pacific Northwest!</p>
+								<p>Hello and welcome! I am an Archivist/Libarian who specializes in audiovisual and digital materials. Particular interests of mine are, using technology to increase access to collections, integrating AV resources into instruction, Open Source software/workflows/formats and preserving the digital and audiovisual heritage of the Pacific Northwest!</p>
                                     <p>For my CV please see the 'Work' section of this website.  For examples of some of my projects see the 'Projects' section.</p>
 							</article>
 
