--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE HTML>
 <!--
 	Dimension by HTML5 UP
@@ -55,13 +56,15 @@
                                 <p><em>BA in Japan Studies</em></p>
                                 <hr />
                                 <h1 id="libraryarchives-experience" align="center">Library/Archives Experience</h1>
+                                <h3>WASHINGTON STATE UNIVERSITY, <strong>Digital Infrastructure and Preservation Librarian</strong></h3>
+                                <p>Pullman, WA -- 10/2017-Present</p>
                                 <h3>AMERICAN ARCHIVE OF PUBLIC BROADCASTING, <strong>National Digital Stewardship Resident at City University of New York Television</strong></h3>
                                 <p>New York, NY -- 07/2016-Present</p>
                                 <ul>
-                                <li>Conducting a full survey of Library's compliance with NDSA Levels of preservation and enacting recommendations</li>
-                                <li>Developing a MySQL based system for automated capture of PREMIS, preservation and fixity metadata</li>
-                                <li>Researching and implementing perceptual video hashing for automated cataloging</li>
-                                <li>Revising and writing micro-service scripts that support core digital and A/V preservation activities</li>
+                                <li>Conducted a full survey of Library's compliance with NDSA Levels of preservation and enacting recommendations</li>
+                                <li>Developed a MySQL based system for automated capture of PREMIS, preservation and fixity metadata</li>
+                                <li>Researched and implementing perceptual video hashing for automated cataloging</li>
+                                <li>Revised and wrote micro-service scripts that support core digital and A/V preservation activities</li>
                                 </ul>
                                 <h3>UNIVERSITY OF WASHINGTON LIBRARIES MEDIA CENTER, <strong>Digital and Archival Media Technician</strong></h3>
                                 <p>Seattle, WA -- 09/2015-07/2016</p>
@@ -99,6 +102,11 @@
                                 <hr />
                                 <h1 id="selected-presentations-and-lectures" align="center">Selected Presentations and Lectures</h1>
                                 <ul>
+                                <li>&quot;Collaborative Conversion: Open Tools and Workflows in AV Preservation.&quot; AMIA Annual Conference 2017. New Orleans, LA. 12/02/2017</li>
+                                <li>&quot;Automation and Similarity: An Introduction to Perceptual Hashing.&quot; AMIA Annual Conference 2017. New Orleans, LA. 12/02/2017</li>
+                                <li>&quot;Codec Encoding for Lossless Archiving and Realtime Transmission (FLAC Update).&quot; IETF 99. Prague, Czech Republic. 07/21/2017.</li>
+                                <li>&quot;Preservation Showdown: Audiovisual Edition.&quot; ALA Annual Conference 2017. Chicago, IL. 06/25/2017.</li>
+                                <li>&quot;How Open Source Audiovisual Tools Help Archivists (And You Too!).&quot; Open Source Bridge. Portland, OR. 06/21/2017.</li>
                                 <li>&quot;Demystifying FFmpeg and FFplay.&quot; AAPB NDSR Webinar Series. 01/26/2017</li>
                                 <li>&quot;Planning for Preservation in Public Media: An AAPB NDSR Update.&quot; AMIA Annual Conference 2016. Pittsburgh, PA. 11/12/2016.</li>
                                 <li>&quot;Expanding Access Through Music: The Adrian Cowell Films and Research Collection.&quot; <em>Poster</em>. IASA Annual Conference 2016. Washington, DC. 09/27/2016.</li>
@@ -125,9 +133,8 @@
                                 <hr />
                                 <h1 id="professional-affiliations" align="center">Professional Affiliations</h1>
                                 <ul>
-                                <li>International Association of Sound and Audiovisual Archives</li>
+                                <li>Association for Recorded Sound Collections</li>
                                 <li>Association of Moving Image Archivists</li>
-                                <li>Northwest Archivists</li>
                                 <li>Seattle Area Archivists</li>
                                 </ul>
 
