--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
     						<!-- Projects -->
     							<article id="projects">
     								<h2 class="major">Projects</h2>
-    								<p>Coming Soon!</p>
+    								<p><a href="https://archive.org/details/@privatezero&tab=uploads"> Analog Sounds of Washington</a>: An attempt to bring A/V archiving into the field while preserving the sounds of our state. Creating archival records of soundscapes using a Sony DC-5 recorder and analog tape.</p>
+                                    <p><a href="https://github.com/amiaopensource/audiorecorder">AudioRecorder</a>: An open source audio digitizing tool built with the Library and Archives community in mind as primary users.</p>
     							</article>
 
 						<!-- Contact -->
