--- a/index.html
+++ b/index.html
@@ -173,15 +173,23 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<p>Hello and welcome! I am an Archivist/Libarian who specializes in audiovisual and digital materials. Particular interests of mine are, using technology to increase access to collections, integrating AV resources into instruction, Open Source software/workflows/formats and preserving the digital and audiovisual heritage of the Pacific Northwest!</p>
-                                    <p>For my CV please see the 'Work' section of this website.  For examples of some of my projects see the 'Projects' section.</p>
+								<p>Hello and welcome! I am a Librarian/Archivist who specializes in audiovisual and digital materials. Particular interests of mine are, using technology to increase access to collections, integrating AV resources into instruction, Open Source software/workflows/formats and preserving the audiovisual heritage of the Pacific Northwest!</p>
+                                <p>For my CV please see the 'Work' section of this website.  For examples of some of my projects see the 'Projects' section.</p>
 							</article>
 
     						<!-- Projects -->
     							<article id="projects">
     								<h2 class="major">Projects</h2>
     								<p><a href="https://archive.org/details/@privatezero&tab=uploads"> Analog Sounds of Washington</a>: An attempt to bring A/V archiving into the field while preserving the sounds of our state. Creating archival records of soundscapes using a Sony DC-5 recorder and analog tape.</p>
-                                    <p><a href="https://github.com/amiaopensource/audiorecorder">AudioRecorder</a>: An open source audio digitizing tool built with the Library and Archives community in mind as primary users.</p>
+                                    <p><strong>Project Maintainer for:</strong>
+                                    <br>
+                                    <a href="https://amiaopensource.github.io/ffmprovisr/">ffmprovisr</a>: An educational resource for the use of the FFmpeg software suite oriented towards preservation and archives minded users.
+                                    <br>
+                                    <br>
+                                    <a href="https://github.com/amiaopensource/audiorecorder">AudioRecorder</a>: An open source audio digitizing tool built with the Library and Archives community in mind as primary users.
+                                    <br>
+                                    <br>
+                                    <a href="https://github.com/amiaopensource/vrecord">vrecord</a>: A widely adopted open source tool for the archival digitzation of analog video materials.</p>
     							</article>
 
 						<!-- Contact -->
